apps/traefik/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-route53"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: traefik-basic-auth@kubernetescrd
spec:
  tls:
    - hosts:
        - traefik.dev.homelab.sawyy.com
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.dev.homelab.sawyy.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 8080
